
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
             android:text="@string/signup"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="10dp">

             <EditText
                 android:id="@+id/emailEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:autofillHints=""
                 android:ems="10"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress" />

             <EditText
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:autofillHints=""
                 android:ems="10"
                 android:hint="@string/password"
                 android:inputType="textPassword" />

             <EditText
                 android:id="@+id/passwordCheckEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:autofillHints=""
                 android:ems="10"
                 android:hint="@string/passwordcheck"
                 android:inputType="textPassword" />

             <Button
                 android:id="@+id/SignUpButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/signupbtn" />

             <Button
                 android:id="@+id/gotoLoginButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="로그인" />
         </LinearLayout>

     </LinearLayout>

     <include
         layout="@layout/view_loader"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
         />
 </RelativeLayout>